<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.blaizenex.jtranslate.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path"
        android:layout_marginTop="5dp"
        android:id="@+id/tvPath"
        android:textSize="18sp"
        android:textColor="#757575"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/tvPathName"
        android:textSize="18sp"
        android:textColor="#757575"
        android:layout_alignTop="@+id/tvPath"
        android:layout_toRightOf="@+id/tvPath"
        android:layout_toEndOf="@+id/tvPath"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/btnViewTXT"
        android:width="180dp"
        android:textColor="#757575"

        android:layout_alignBottom="@+id/linearLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:id="@+id/btnTranslate"
        android:width="180dp"
        android:padding="0dp"
        android:textColor="#757575"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#ff9800"
        android:layout_marginBottom="0dp"
        android:paddingBottom="0dp"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/tvPathName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#ff9800"
        android:id="@+id/linearLayout2"
        android:layout_alignBottom="@+id/btnTranslate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_top"
        android:id="@+id/textView"
        android:textSize="18sp"
        android:textColor="#757575"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/edHandle_input"
        android:hint="@string/info_bottom"
        android:textSize="14sp"
        android:textColor="#757575"
        android:singleLine="false"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btnViewTXT"
        android:layout_alignEnd="@+id/btnViewTXT" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/btnViewTXT"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btnTranslate"
        android:layout_alignEnd="@+id/btnTranslate" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/btnClearTextArea"
        android:layout_below="@+id/btnViewTXT"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/btnViewTXT"
        android:layout_alignStart="@+id/btnViewTXT"
        android:textColor="#757575" />

</RelativeLayout>
